Resolvendo alguns bugs e começando a responsividade

--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="icon" href="/src/img/transformacao.png">
+    <title>Ryan Luca</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <div id="fb-root"></div>
-    <script async defer crossorigin=" anonymous"
-      src="https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v14.0&appId= 544322283833416&autoLogAppEvents=1"
-      nonce="vcOT5oJt"></script>
+      <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+      <script>
+        AOS.init();
+      </script>
   </body>
 </html>
